LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contract_Line__c/VENDOR_Contract_Line__c.object-meta.xml
<CustomObject>
    <description>Vendor Contract Lines are line items from a contract. These could be various products under a Subscription contract, or multiple engagements under a service agreement.</description>
    <label>Vendor Contract Line</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Contract Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>