LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contract_Line__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - The contract for this line.</description>
    <label>Contract</label>
    <referenceTo>VENDOR_Contract__c</referenceTo>
    <relationshipLabel>Contract Lines</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>