LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contract_Line__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - The rate per unit for this contract line.</description>
    <inlineHelpText>The rate per unit for this contract line.</inlineHelpText>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>