LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contract_Line__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>2020-04-03 - N. Ehrmann - AUTO - The total amount for this line.</description>
    <formula>Rate__c * Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>