LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contract_Line__c/fields/Unit_Description__c.field-meta.xml
<CustomField>
    <fullName>Unit_Description__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - If necessary, a description of the cost units.</description>
    <inlineHelpText>If necessary, a description of the cost units.</inlineHelpText>
    <label>Unit Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>