LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contract_Line__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - The type of units for this product, such as &quot;Hours&quot; or &quot;Licenses&quot;.</description>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Licenses</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Inventory Units</fullName>
            </value>
            <value>
                <fullName>Transactions</fullName>
            </value>
            <value>
                <fullName>Fixed Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>