LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contract_Line__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - The number of units for this line.</description>
    <inlineHelpText>The number of units for this line.</inlineHelpText>
    <label>Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>